fix: horizontal filter z-index

--- a/src/components/UI/template/HorizontalFilter/HorizontalFilter.module.scss
+++ b/src/components/UI/template/HorizontalFilter/HorizontalFilter.module.scss
@@ -8,7 +8,7 @@
   gap: 1rem;
   background-color: #f0f1f3;
   position: relative;
-  z-index: 2;
+  z-index: 1;
 
   @media (max-width: v.$screen-md) {
     flex-direction: column;
